<resources>
    <string name="app_name">ImitationMaFengWo</string>
    <string name="operate_fail_tips">操作失败</string>
    <string name="press_again_exit">再按一次返回退出</string>
    <string name="info">消息</string>
    <string name="are_u_sure_exit">确认退出吗？</string>
    <string name="continue_download_after_exit">退出后继续未完成项下载</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="api_request_timeout">网络请求超时...</string>
</resources>
