<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <LinearLayout
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:minHeight="172dp"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip"
            android:layout_marginTop="30dip"
            android:background="@drawable/system_msgbox_bg">


        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="8dip"
                android:paddingRight="8dip">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="48dip"
                          android:paddingLeft="8dip"
                          android:gravity="center">
                <com.sfacg.ui.SFTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="36dip"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dip"
                    android:text="@string/info"
                    android:textColor="@color/top_nav_tips_num_color"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dip"/>
            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="2px"
                    android:background="@color/top_nav_indicator_color"/>

            <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip">

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.sfacg.ui.SFTextView
                        android:id="@+id/tvMsg"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dip"
                        android:paddingRight="14dip"
                        android:paddingTop="14dip"
                        android:text="@string/are_u_sure_exit"
                        android:textColor="@color/bg_gray_color"
                        android:lineSpacingExtra="6dip"
                        android:textSize="@dimen/content_size"/>
                 <com.sfacg.ui.SFTextView
                        android:id="@+id/tvMsg2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dip"
                        android:paddingRight="14dip"
                        android:paddingTop="14dip"
                        android:textColor="@color/bg_gray_color"
                        android:lineSpacingExtra="6dip"
                        android:textSize="@dimen/content_size"
                        android:visibility="gone"/>
                    
                </LinearLayout>
                
            </ScrollView>

            <LinearLayout
                    android:id="@+id/checkboxwrapper"
                    android:layout_width="fill_parent"
                    android:layout_height="34dip"
                    android:layout_marginLeft="8dip"
                    android:layout_marginRight="8dip"
                    android:visibility="visible"
                    android:layout_marginBottom="8dip"
                    android:gravity="center_vertical">

                <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dip"
                        android:layout_marginRight="6dip"
                        android:layout_marginTop="2dip"
                        android:layout_marginBottom="2dip"
                        android:button="@drawable/checkbox_dialog_selector"
                        android:text="@string/continue_download_after_exit"
                        android:textColor="@color/light_gray6"
                        android:paddingLeft="30dip"
                        android:textSize="14dip"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                >
            <LinearLayout android:id="@+id/leftSpacer"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
            <com.sfacg.ui.SFButton
                    android:id="@+id/messageBoxBtn1"
                    android:layout_width="0dip"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg_system_black_cancel_selector"
                    android:text="@string/cancel"
                    android:textColor="@color/text_color_black_selector"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    android:layout_marginTop="6dip"
                    android:layout_marginBottom="12dip"
                    />

            <com.sfacg.ui.SFButton
                    android:id="@+id/messageBoxBtn2"
                    android:layout_width="0dip"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg_system_orange_selector"
                    android:text="@string/sure"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size"
                    android:gravity="center"
                    android:visibility="visible"
                    android:layout_marginTop="6dip"
                    android:layout_marginBottom="12dip"
                    android:layout_marginLeft="12dip"
                    />
            
            <LinearLayout android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>